# wechat-crack

./: .gitignore  .init.sh.swp  Makefile.am  README.md  init.sh
.deps/: daemon-main.Po
daemon/: .gitignore  Makefile.am  daemon-main.c
src/: .gitignore  Makefile.am  config.cache  config.h  config.status  configure.ac  daemon-main.c
src/.deps/: daemon-main.Po
wechat-crack-1.0/: Makefile.am  configure.ac
wechat-crack-1.0/daemon/: Makefile.am
